<resources>
    <string name="app_name">AIDL Client</string>

    <string name="title_aidl">AIDL</string>
    <string name="title_messenger">Messenger</string>
    <string name="title_broadcast">Broadcast</string>
    <string name="connect">Connect</string>
    <string name="send">Send</string>
    <string name="disconnect">Disconnect</string>
    <string name="send_data_hint">Send data to the server</string>
    <string name="process_id_title">Process ID: %s</string>
    <string name="connection_count_title">Connection count: %s</string>
    <string name="thread_title">Thread: %s</string>
    <string name="broadcast_time_title">Broadcast sent: %s</string>
    <string name="broadcast_time_format">%d:%d:%d</string>
</resources>
